@@ -4,7 +4,7 @@
 \title{News for \R{} Package \pkg{Matrix}}
 \encoding{UTF-8}
 %% NB: The date (yyyy-mm-dd) is the "Packaged: " date in ../DESCRIPTION
-\section{Changes in version 1.6-2 (2023-08-14 r4231)}{
+\section{Changes in version 1.6-2 (2023-08-14 r4232)}{
   \subsection{New Features}{
     \itemize{
       \item .
@@ -14,6 +14,8 @@
     \itemize{
       \item Methods for \code{cbind2} and \code{rbind2} did not in all
       cases handle vectors as 1-column and 1-row matrices, respectively.
+
+	  \item \code{rcond(<0-by-0>)} now returns \code{Inf}; see \PR{18543}.
     }
   }
   \subsection{Misc}{
